Fixing the searchbar(cont'd)
As previously stated, the search form is broken on mobile, however this
commit kinda show it has been fixed. on my local computer the searchbar seems to be relatively functional,
however in order to really be sure of this fix, I would need to check it
on mobile, which is what this commit does

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -74,8 +74,8 @@ html, body{
 .search_form {
   position: relative;
   background-color: rgba(0, 0, 0, 0.64);
-  margin: 5% 5%;
-  bottom: 10%;
+  // margin: 5% 5%;
+  // bottom: 10%;
 
   select{
     // margin: -2px 40px;
@@ -107,10 +107,10 @@ html, body{
   // }
 
   button{
-    height: 40px;
-    line-height: 42px;
-    vertical-align: middle;
-    margin-bottom: 5px;
+    // height: 40px;
+    // line-height: 42px;
+    // vertical-align: middle;
+    // margin-bottom: 5px;
   }
 }
 
